--- a/admin/wallet.html
+++ b/admin/wallet.html
@@ -15,6 +15,8 @@
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/main.css">
 <link rel="stylesheet" href="assets/css/color_skins.css">
+    <script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/js/pages/admin-wallet.js"></script>
 </head>
 <body class="theme-orange">
 <!-- Page Loader -->
@@ -135,7 +137,7 @@
     <div class="menu">
         <ul class="list">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="active"> <a href="index.html"><i class="zmdi zmdi-home"></i><span>Dashboard</span></a>
+            <li class="active"> <a href="index.html"><i class="zmdi zmdi-home"></i><span>Wallet</span></a>
 
             </li>
 
@@ -239,14 +241,14 @@
     <div class="block-header">
         <div class="row">
             <div class="col-lg-7 col-md-6 col-sm-12">
-                <h2>Dashboard
+                <h2>Wallet
                 <small class="text-muted">Welcome to Gasfista Application</small>
                 </h2>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-12">
                 <ul class="breadcrumb float-md-right">
                     <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i> Gafista</a></li>
-                    <li class="breadcrumb-item active">Dashboard 1</li>
+                    <li class="breadcrumb-item active">Wallet</li>
                 </ul>
             </div>
         </div>
@@ -261,136 +263,21 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Agents Profiles <small>Wallets</small> </h2>
-                        <ul class="header-dropdown m-r--5">
-                            <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="zmdi zmdi-more-vert"></i> </a>
-                                <ul class="dropdown-menu slideUp ">
-                                    <li><a href="javascript:void(0);">Action</a></li>
-                                    <li><a href="javascript:void(0);">Another action</a></li>
-                                    <li><a href="javascript:void(0);">Something else</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <h2>Clients Wallet</h2>
                     </div>
                     <div class="body table-responsive members_profiles">
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th style="width:60px;">User ID</th>
+                                    <th>#</th>
                                     <th>Fullname</th>
                                     <th>Wallet Balance</th>
                                     <th>Last Fund Added</th>                                    
                                     <th>Date</th>
-                                    
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <img class="rounded-circle" src="assets/images/xs/avatar1.jpg" alt="user" width="40"> </td>
-                                    <td>
-                                        <a href="javascript:;">Logan</a>
-                                    </td>
-                                    <td>$420</td>
-                                    <td>23</td>                                   
-                                    <td>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                    </td>
-                                     <td>
-                                        <div class="progress" >
-                                            <div class="progress-bar l-green" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100" style="width: 87%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img class="rounded-circle" src="assets/images/xs/avatar2.jpg" alt="user" width="40"> </td>
-                                    <td>
-                                        <a href="javascript:;">Isabella</a>
-                                    </td>
-                                    <td>$350</td>
-                                    <td>16</td>                                   
-                                    <td>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                    </td>
-                                     <td>
-                                        <div class="progress">
-                                            <div class="progress-bar l-amber" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img class="rounded-circle" src="assets/images/xs/avatar3.jpg" alt="user" width="40"> </td>
-                                    <td>
-                                        <a href="javascript:;">Jackson</a>
-                                    </td>
-                                    <td>$201</td>
-                                    <td>11</td>                                   
-                                    <td>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                    </td>
-                                     <td>
-                                        <div class="progress">
-                                            <div class="progress-bar l-parpl" role="progressbar" aria-valuenow="32" aria-valuemin="0" aria-valuemax="100" style="width:32%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img class="rounded-circle" src="assets/images/xs/avatar4.jpg" alt="user" width="40"> </td>
-                                    <td>
-                                        <a href="javascript:;">Victoria</a>
-                                    </td>
-                                    <td>$651</td>
-                                    <td>28</td>                                   
-                                    <td>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star-half"></i>
-                                    </td>
-                                     <td>
-                                        <div class="progress" >
-                                            <div class="progress-bar l-green" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <img class="rounded-circle" src="assets/images/xs/avatar5.jpg" alt="user" width="40"> </td>
-                                    <td>
-                                        <a href="javascript:;">Lucas</a>
-                                    </td>
-                                    <td>$300</td>
-                                    <td>20</td>                                   
-                                    <td>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star"></i>
-                                        <i class="zmdi zmdi-star-half"></i>
-                                        <i class="zmdi zmdi-star-outline"></i>
-                                    </td>
-                                     <td>
-                                        <div class="progress">
-                                            <div class="progress-bar l-blue" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                
+                            <tbody id="tblwallet">
+
                             </tbody>
                         </table>
                     </div>
