View All Billings

--- a/admin/wallet.html
+++ b/admin/wallet.html
@@ -137,7 +137,7 @@
     <div class="menu">
         <ul class="list">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="active"> <a href="index.html"><i class="zmdi zmdi-home"></i><span>Wallet</span></a>
+            <li class="active"> <a href="index.html"><i class="zmdi zmdi-home"></i><span>Dashboard</span></a>
 
             </li>
 
