paypal integration wallet activation wallet funding wallet deductions modified api to contain more methods modified view ticket and view property

--- a/user/cuproperty.html
+++ b/user/cuproperty.html
@@ -148,7 +148,7 @@
             <li><a href="javascript:void(0)">Wallet</a>
                 <ul class="pullDown">                                   
                     <li><a href="uvwallet.html">View Wallet</a> </li>
-                    <li><a href="atwallet.html">Add to Wallet</a> </li>
+                    <li><a href="atwallet.html">Fund Wallet</a> </li>
                     
                 </ul>
             </li>
