--- a/user/uvwallet.html
+++ b/user/uvwallet.html
@@ -21,10 +21,6 @@
     <script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/pages/user-wallet.js"></script>
 
-
-
-
-
 </head>
 
 <body class="theme-cyan index2">
@@ -154,7 +150,7 @@
             <li><a href="javascript:void(0)">Wallet</a>
                 <ul class="pullDown">                                   
                     <li><a href="uvwallet.html">View Wallet</a> </li>
-                    <li><a href="atwallet.html">Add to Wallet</a> </li>
+                    <li><a href="atwallet.html">Fund Wallet</a> </li>
                     
                 </ul>
             </li>
@@ -514,11 +510,11 @@
                         <hr>
                         <div class="row">
                             <div class="col-4">
-                                <h5>N98,000</h5>
+                                <h5 id="walletbalance">No Money</h5>
                                 <small>Balance</small>
                             </div>
                             <div class="col-4">
-                                <h5>8</h5>
+                                <h5 id="clientreceiptcount">8</h5>
                                 <small>Total Receipts</small>
                             </div>
                             <div class="col-4">
