--- a/user/index.html
+++ b/user/index.html
@@ -146,7 +146,7 @@
             <li><a href="javascript:void(0)">Wallet</a>
                 <ul class="pullDown">                                   
                     <li><a href="uvwallet.html">View Wallet</a> </li>
-                    <li><a href="atwallet.html">Add to Wallet</a> </li>
+                    <li><a href="atwallet.html">Fund Wallet</a> </li>
                     
                 </ul>
             </li>
@@ -527,7 +527,7 @@
             <div class="col-lg-3 col-sm-6 col-md-6 col-xs-12">
                 <div class="card">
                     <div class="body">
-                        <h3>26.8%</h3>
+                        <h3 id="walletbalance">26.8%</h3>
                         <p class="text-muted">Wallet Balance</p>
                         <div class="progress">
                             <div class="progress-bar l-blush" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
