--- a/user/userprofile.html
+++ b/user/userprofile.html
@@ -146,7 +146,7 @@
             <li><a href="javascript:void(0)">Wallet</a>
                 <ul class="pullDown">                                   
                     <li><a href="javascript:void(0)">View Wallet</a> </li>
-                    <li><a href="javascript:void(0)">Add to Wallet</a> </li>
+                    <li><a href="javascript:void(0)">Fund Wallet</a> </li>
                     
                 </ul>
             </li>
